; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/net/extr_ppp_mppe.c_mppe_comp_stats.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/net/extr_ppp_mppe.c_mppe_comp_stats.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.compstat = type { i32 }
%struct.ppp_mppe_state = type { %struct.compstat }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*, %struct.compstat*)* @mppe_comp_stats to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @mppe_comp_stats(i8* %0, %struct.compstat* %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca %struct.compstat*, align 8
  %5 = alloca %struct.ppp_mppe_state*, align 8
  store i8* %0, i8** %3, align 8
  store %struct.compstat* %1, %struct.compstat** %4, align 8
  %6 = load i8*, i8** %3, align 8
  %7 = bitcast i8* %6 to %struct.ppp_mppe_state*
  store %struct.ppp_mppe_state* %7, %struct.ppp_mppe_state** %5, align 8
  %8 = load %struct.compstat*, %struct.compstat** %4, align 8
  %9 = load %struct.ppp_mppe_state*, %struct.ppp_mppe_state** %5, align 8
  %10 = getelementptr inbounds %struct.ppp_mppe_state, %struct.ppp_mppe_state* %9, i32 0, i32 0
  %11 = bitcast %struct.compstat* %8 to i8*
  %12 = bitcast %struct.compstat* %10 to i8*
  call void @llvm.memcpy.p0i8.p0i8.i64(i8* align 4 %11, i8* align 4 %12, i64 4, i1 false)
  ret void
}

; Function Attrs: argmemonly nounwind willreturn
declare void @llvm.memcpy.p0i8.p0i8.i64(i8* noalias nocapture writeonly, i8* noalias nocapture readonly, i64, i1 immarg) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
